--- a/Lab04FibonnaciCards/index.html
+++ b/Lab04FibonnaciCards/index.html
@@ -34,7 +34,7 @@
                 htmlElements : {
                     problemaFormFibo : document.getElementById('formulariolab4'),
                     entradaelementos : document.getElementById('elementos'),
-                    card : document.getElementById('tarjeta'),
+                    tarjetaresultado : document.getElementById('tarjeta'),
                     tarjetas : document.getElementsByClassName('tarjetas')
                 },
                 init(){
@@ -42,7 +42,7 @@
                         'submit', 
                         fnlab4.handlers.formulariolab4
                     );
-                    fnlab4.htmlElements.card.addEventListener(
+                    fnlab4.htmlElements.tarjetaresultado.addEventListener(
                         'click', 
                         fnlab4.handlers.eliminartarjetadelresultado
                     );
@@ -60,40 +60,39 @@
                     }
                 },
                 methods: {
-                    tarjetasderesultados(numero) {
-                        let card = fnlab4.htmlElements.card;
-                        card.innerHTML = '';
-
-                        if (numero) {
-                            let calc_fibonacci = fnlab4.methods.calc_fibonacci(numero);
-
-                            calc_fibonacci.forEach(function (num) {
-                                let cardNumbers = document.createElement('div');
-                                cardNumbers.className = 'tarjetas';
-                                cardNumbers.textContent = num;
-                                card.appendChild(cardNumbers);
-                            });
-
-                            card.style.display = 'grid';
-                        } else {
-                            card.style.display = 'none';
-                        }
-                    },
-                    calc_fibonacci(numero) {
+                    calc_fibonacci(elementonumero) {
                         let calc_fibonacci = [0, 1];
-
-                        while (calc_fibonacci[calc_fibonacci.length - 1] <= numero) {
-                            let siguienteNumero = calc_fibonacci[calc_fibonacci.length - 1] + calc_fibonacci[calc_fibonacci.length - 2];
-                            calc_fibonacci.push(siguienteNumero);
+                        while (calc_fibonacci[calc_fibonacci.length - 1] <= elementonumero) {
+                            let siguienteElemento = calc_fibonacci[calc_fibonacci.length - 1] + calc_fibonacci[calc_fibonacci.length - 2];
+                            calc_fibonacci.push(siguienteElemento);
                         }
-
                         calc_fibonacci.pop();
-
                         return calc_fibonacci;
                     },
                     Eliminatarjetaenlista(index) {
                         fnlab4.htmlElements.tarjetas[index].remove();
-                    }
+                    },
+                    tarjetasderesultados(elementonumero) {
+                        let tarjetaresultado = fnlab4.htmlElements.tarjetaresultado;
+                        tarjetaresultado.innerHTML = '';
+
+                        if (elementonumero) {
+                            let calc_fibonacci = 0;
+                            calc_fibonacci = fnlab4.methods.calc_fibonacci(elementonumero);
+
+                            calc_fibonacci.forEach(function (elementnum) {
+                                let tarjetaresultadoNumbers = document.createElement('div');
+                                tarjetaresultadoNumbers.className = 'tarjetas';
+                                tarjetaresultadoNumbers.textContent = elementnum;
+                                tarjetaresultado.appendChild(tarjetaresultadoNumbers);
+                            });
+
+                            tarjetaresultado.style.display = 'grid';
+                        } else {
+                            tarjetaresultado.style.display = 'none';
+                        }
+                    },
+
                 }
             };
             fnlab4.init();
