--- a/Lab04FibonnaciCards/index.html
+++ b/Lab04FibonnaciCards/index.html
@@ -13,7 +13,7 @@
     <main class="contenedor1">
         <div class="fondo-forma">
             <form id="formulariolab4" class="formulario">
-                <h1>Secuencia calc_fibonacci</h1>
+                <h1>Secuencia Fibonacci</h1>
                 <label class="cantelem" for="elementos">Cantidad de elementos:</label>
                 <input id="elementos" type="number" class="input-form">
                 <button class="btn-calcular" type="submit">Calcular</button>
