--- a/parcial2_ds9_24/addrecord.html
+++ b/parcial2_ds9_24/addrecord.html
@@ -28,6 +28,9 @@
 
         <input id="btn-cancelar" type="submit" value="Regresar">
 
+        <div id="divresultado"  class="mensaje-exitoso">
+
+        </div>
     </form>
     <script src=".\addrecord.js"></script>
 </body>
