--- a/parcial2_ds9_24/index.html
+++ b/parcial2_ds9_24/index.html
@@ -13,15 +13,16 @@
             <div id="spannombreusuario">
               <span id="usuariobienvenido">Bienvenido, [Nombre de Usuario]</span>
             </div>
-            <ul id="navbaropciones">
-              <li><a href="perfil.html">Perfil</a></li>
-              <li>
-                <button id="btnLogout" type="submit">Cerrar Sesion</button>
-                <!-- <a 
-                    href="#" onclick="logout()">Cerrar sesión
-                </a> -->
-              </li>
-            </ul>
+            <div id="pyl">
+                <ul id="navbaropciones">
+                    <li><a href="perfil.html">Perfil</a></li>
+                    <li>
+                      <button id="btnLogout" type="submit">Cerrar Sesion</button>
+                    </li>
+                  </ul>
+     
+            </div>
+
         </nav>
     </header>
 
