--- a/parcial2_ds9_24/login.html
+++ b/parcial2_ds9_24/login.html
@@ -10,10 +10,14 @@
     <h1>Login</h1>
     <form id="loginForm">
       <label for="username">Usuario:</label>
-      <input type="text" id="username" name="username" required>
+      <input type="text" id="username" name="username" >
       <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" required>
+      <input type="password" id="password" name="password" >
+
       <button id="btnsubmit" type="submit">Iniciar Sesión</button>
+
+      <button id="btnregistrarse" type="submit">Registrarse</button>
+
     </form>
 
     <script src=".\login.js"></script>
