--- a/parcial2_ds9_24/registro.html
+++ b/parcial2_ds9_24/registro.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/perfiledit.css">
-  <title>Perfil de Usuario</title>
+  <title>Registro de Usuario</title>
 </head>
 <body>
-  <h1>Perfil de Usuario</h1>
+  <h1>Registro de Usuario</h1>
   <form id="formaprofile" action="">
+
+    <label for="usuario">Usuario:</label>
+    <input type="text" id="usuario" name="usuario" required>
 
     <label for="nombreCompleto">Nombre Completo:</label>
     <input type="text" id="nombreCompleto" name="nombreCompleto" required>
@@ -33,8 +36,9 @@
     <button id="btnSalvar" type="submit">Salvar</button>
     <button id="btnCerrar" type="submit">Cerrar</button>
 
+
   </form>
-  <div id="divresultado"  class="mensaje-exitoso"></div>
-  <script src="perfiledit.js"></script>
+  <div id="divresultado"  class="mensaje-exitoso">
+  <script src="registro.js"></script>
 </body>
 </html>
